--- a/4.html
+++ b/4.html
@@ -7,6 +7,7 @@
 <body>
   <hl><h1>정답입니다. 답:4<br></h1></h1>
 
-  <h1>다음 QR코드 장소는 급식실 출구 쪽에 있습니다.</h1>
+  <h1>다음 QR코드 장소는 급식실 출구 쪽에 있습니다.</h1><br>
+  <img src="q.jpg" width="70%" height="80%" title="q">
 </body>
 </html>
